src/app/home/doctype/doctype.component.css
.doctype-con {
  width: 100%;
  height: 54px;
  padding: 3px 6px;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  box-sizing: border-box;
  margin: 2px 0;
  border-bottom: 1px white solid;
}


img {
  width: 48px;
  height: 48px;
}

.name-dir {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-end;
  width: 80%;
  margin-left: 5px;
  color: whitesmoke;
}

.name-dir > div {
  text-align: right;
}

.name {
  font-weight: 600;
  font-size: large;
  width: 100%;
  margin-right: 5px;
}

.dir {
  width: 100%;
  font-weight: 300;
  font-size: smaller;
  text-overflow: ellipsis;
  overflow: hidden;
}

